--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -282,7 +282,7 @@
             android:text="Login"
             android:textStyle="bold"
             android:textAllCaps="false"
-            android:textColor="@color/blue_1"
+            android:textColor="@color/black"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.85"
