--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,8 @@
     <!-- Base application theme. -->
     <style name="Theme.Project" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/blue_1</item>
+        <item name="colorPrimary">@color/black</item>
+<!--                                blue_1-->
         <item name="colorPrimaryVariant">@color/blue_2</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
