--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -51,26 +51,26 @@
         tools:layout_editor_absoluteX="35dp"
         tools:layout_editor_absoluteY="133dp" />
 
-    <TextView
-        android:id="@+id/tvPhone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/etEmail"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="40dp"
-        android:fontFamily="@font/britanica_extrabold"
-        android:text="Mobile Number"
-        android:textColor="@color/black"
-        android:textSize="14sp"
-        tools:layout_editor_absoluteX="35dp"
-        tools:layout_editor_absoluteY="219dp" />
+<!--    <TextView-->
+<!--        android:id="@+id/tvPhone"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_below="@+id/etEmail"-->
+<!--        android:layout_alignParentStart="true"-->
+<!--        android:layout_marginStart="20dp"-->
+<!--        android:layout_marginTop="40dp"-->
+<!--        android:fontFamily="@font/britanica_extrabold"-->
+<!--        android:text="Mobile Number"-->
+<!--        android:textColor="@color/black"-->
+<!--        android:textSize="14sp"-->
+<!--        tools:layout_editor_absoluteX="35dp"-->
+<!--        tools:layout_editor_absoluteY="219dp" />-->
 
     <TextView
         android:id="@+id/tvPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/etPhone"
+        android:layout_below="@+id/etEmail"
         android:layout_alignParentStart="true"
         android:layout_marginStart="20dp"
         android:layout_marginTop="40dp"
@@ -117,24 +117,24 @@
         tools:layout_editor_absoluteX="34dp"
         tools:layout_editor_absoluteY="158dp" />
 
-    <EditText
-        android:id="@+id/etPhone"
-        android:layout_width="354dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tvPhone"
-        android:layout_alignParentStart="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="7dp"
-        android:background="@drawable/custom_input"
-        android:ems="10"
-        android:fontFamily="@font/helveticaneue_light"
-        android:hint="Enter your mobile number"
-        android:inputType="phone"
-        android:padding="12dp"
-        android:textSize="14dp"
-        tools:layout_editor_absoluteX="34dp"
-        tools:layout_editor_absoluteY="249dp" />
+<!--    <EditText-->
+<!--        android:id="@+id/etPhone"-->
+<!--        android:layout_width="354dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_below="@+id/tvPhone"-->
+<!--        android:layout_alignParentStart="true"-->
+<!--        android:layout_centerHorizontal="true"-->
+<!--        android:layout_marginStart="20dp"-->
+<!--        android:layout_marginTop="7dp"-->
+<!--        android:background="@drawable/custom_input"-->
+<!--        android:ems="10"-->
+<!--        android:fontFamily="@font/helveticaneue_light"-->
+<!--        android:hint="Enter your mobile number"-->
+<!--        android:inputType="phone"-->
+<!--        android:padding="12dp"-->
+<!--        android:textSize="14dp"-->
+<!--        tools:layout_editor_absoluteX="34dp"-->
+<!--        tools:layout_editor_absoluteY="249dp" />-->
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/lPassword"
