--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -37,10 +37,25 @@
         tools:layout_editor_absoluteY="92dp" />
 
     <TextView
-        android:id="@+id/tvEmailAddress"
+        android:id="@+id/tvName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvConnect"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="40dp"
+        android:fontFamily="@font/britanica_extrabold"
+        android:text="Display Name"
+        android:textColor="@color/black"
+        android:textSize="14sp"
+        tools:layout_editor_absoluteX="35dp"
+        tools:layout_editor_absoluteY="133dp" />
+
+    <TextView
+        android:id="@+id/tvEmailAddress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/etName"
         android:layout_alignParentStart="true"
         android:layout_marginStart="20dp"
         android:layout_marginTop="40dp"
@@ -97,6 +112,25 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteY="500dp" />
+
+    <EditText
+        android:id="@+id/etName"
+        android:layout_width="354dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tvName"
+        android:layout_alignParentStart="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="7dp"
+        android:background="@drawable/custom_input"
+        android:ems="10"
+        android:fontFamily="@font/helveticaneue_light"
+        android:hint="Enter your display name"
+        android:inputType="textEmailAddress"
+        android:padding="12dp"
+        android:textSize="14dp"
+        tools:layout_editor_absoluteX="34dp"
+        tools:layout_editor_absoluteY="158dp" />
 
     <EditText
         android:id="@+id/etEmail"
