--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -6,6 +6,19 @@
     android:orientation="vertical"
     tools:context=".fragments.SettingsFragment">
 
+    <Button
+        android:id="@+id/btnSignout"
+        android:layout_width="wrap_content"
+        android:layout_height="29dp"
+        android:layout_gravity="right"
+        android:layout_margin="20dp"
+        android:background="@drawable/layout_rounded"
+        android:fontFamily="@font/helveticaneue_medium"
+        android:text="Sign Out"
+        android:paddingVertical="0dp"
+        android:textAllCaps="false"
+        android:textSize="10sp" />
+
     <TextView
         android:id="@+id/tvSettings"
         android:layout_width="wrap_content"
@@ -13,7 +26,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="-10dp"
         android:fontFamily="@font/britanica_black"
         android:letterSpacing="0.02"
         android:text="Settings"
