--- a/app/src/main/res/layout/item_investor.xml
+++ b/app/src/main/res/layout/item_investor.xml
@@ -21,10 +21,11 @@ xmlns:tools="http://schemas.android.com/tools">
 
     <ImageView
         android:id="@+id/ivProfileImage"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
+        android:layout_gravity="center"
         tools:srcCompat="@tools:sample/avatars" />
 </androidx.cardview.widget.CardView>
 
