--- a/app/src/main/res/layout/item_member.xml
+++ b/app/src/main/res/layout/item_member.xml
@@ -14,17 +14,17 @@
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:elevation="12dp"
-
         android:innerRadius="0dp"
         android:shape="ring"
         app:cardCornerRadius="40dp">
 
         <ImageView
             android:id="@+id/ivProfileImage"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
             android:layout_marginStart="0dp"
             android:layout_marginTop="0dp"
+            android:layout_gravity="center"
             tools:srcCompat="@tools:sample/avatars" />
     </androidx.cardview.widget.CardView>
 
