--- a/app/src/main/res/drawable/custom_input.xml
+++ b/app/src/main/res/drawable/custom_input.xml
@@ -5,7 +5,7 @@
         <shape android:shape="rectangle">
             <solid android:color="@android:color/white"/>
             <corners android:radius="5dp"/>
-            <stroke android:color="@color/design_default_color_primary" android:width="1dp"/>
+            <stroke android:color="@color/blue_2" android:width="1dp"/>
         </shape>
     </item>
 
