--- a/app/src/main/res/layout/fragment_trade.xml
+++ b/app/src/main/res/layout/fragment_trade.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".fragments.TradeFragment">
 
@@ -22,7 +23,7 @@
         android:textSize="35sp" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/etSearch"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -44,6 +45,85 @@
         android:layout_marginHorizontal="10dp"
 
         />
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cvCoinImage"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:elevation="12dp"
+
+            android:innerRadius="0dp"
+            android:shape="ring"
+            app:cardCornerRadius="40dp">
+
+            <ImageView
+                android:id="@+id/ivCoinImage"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginStart="0dp"
+                android:layout_marginTop="0dp"
+                android:layout_gravity="center"
+                tools:srcCompat="@tools:sample/avatars" />
+        </androidx.cardview.widget.CardView>
+
+        <TextView
+            android:id="@+id/tvCoinName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="18dp"
+            android:layout_marginTop="19dp"
+            android:layout_marginEnd="245dp"
+            android:layout_toEndOf="@+id/cvCoinImage"
+            android:fontFamily="@font/helveticaneuehv"
+            android:textColor="@color/black"
+            android:textSize="16dp"
+            android:text="Tether"
+            />
+
+        <TextView
+            android:id="@+id/tvCoinTicker"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tvCoinName"
+            android:layout_marginStart="18dp"
+            android:layout_marginTop="6dp"
+            android:layout_toEndOf="@+id/cvCoinImage"
+            android:fontFamily="@font/helveticaneue_medium"
+            android:text="USDT" />
+
+        <TextView
+            android:id="@+id/tvPrice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="19dp"
+            android:layout_marginEnd="0dp"
+            android:fontFamily="@font/helveticaneuehv"
+            android:textColor="@color/black"
+            android:textSize="16dp"
+            android:text="$0.99" />
+
+        <TextView
+            android:id="@+id/tvPriceChange"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tvPrice"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="6dp"
+            android:layout_marginEnd="0dp"
+            android:fontFamily="@font/helveticaneue_medium"
+            android:text="-0.01%" />
+    </RelativeLayout>
 
 
 </LinearLayout>
