--- a/app/src/main/res/layout/item_coin.xml
+++ b/app/src/main/res/layout/item_coin.xml
@@ -5,16 +5,27 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <TextView
+        android:id="@+id/tvRank"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="30dp"
+        android:fontFamily="@font/helveticaneuehv"
+        android:text="#1"
+        android:textColor="@color/black"
+        android:textSize="20dp" />
+
     <androidx.cardview.widget.CardView
         android:id="@+id/cvCoinImage"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="0dp"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
+        android:layout_toEndOf="@+id/tvRank"
         android:elevation="12dp"
-
         android:innerRadius="0dp"
         android:shape="ring"
         app:cardCornerRadius="40dp">
@@ -23,9 +34,9 @@
             android:id="@+id/ivCoinImage"
             android:layout_width="60dp"
             android:layout_height="60dp"
+            android:layout_gravity="center"
             android:layout_marginStart="0dp"
             android:layout_marginTop="0dp"
-            android:layout_gravity="center"
             tools:srcCompat="@tools:sample/avatars" />
     </androidx.cardview.widget.CardView>
 
@@ -36,12 +47,11 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="18dp"
         android:layout_marginTop="19dp"
-        android:layout_marginEnd="245dp"
         android:layout_toEndOf="@+id/cvCoinImage"
         android:fontFamily="@font/helveticaneuehv"
+        android:text="Tether"
         android:textColor="@color/black"
-        android:textSize="16dp"
-        tools:text="Tether" />
+        android:textSize="16dp" />
 
     <TextView
         android:id="@+id/tvCoinTicker"
@@ -52,7 +62,7 @@
         android:layout_marginTop="6dp"
         android:layout_toEndOf="@+id/cvCoinImage"
         android:fontFamily="@font/helveticaneue_medium"
-        tools:text="USDT" />
+        android:text="USDT" />
 
     <TextView
         android:id="@+id/tvPrice"
@@ -65,7 +75,7 @@
         android:fontFamily="@font/helveticaneuehv"
         android:textColor="@color/black"
         android:textSize="16dp"
-        tools:text="$0.99" />
+        android:text="$0.99" />
 
     <TextView
         android:id="@+id/tvPriceChange"
@@ -76,5 +86,6 @@
         android:layout_marginTop="6dp"
         android:layout_marginEnd="0dp"
         android:fontFamily="@font/helveticaneue_medium"
-        tools:text="-0.01%" />
+        android:text="-0.01%" />
+
 </RelativeLayout>
