trade: details page initial implementation

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="blue_1">#FF2A6BAC</color>
     <color name="blue_11">#FF8BD3E6</color>
     <color name="blue_2">#FF113A7C</color>
+    <color name="red_1">#FFfe5857</color>
+    <color name="green_1">#FF48cd55</color>
 </resources>
