trade: payment page initial implementation

--- a/app/src/main/res/layout/fragment_coin_details.xml
+++ b/app/src/main/res/layout/fragment_coin_details.xml
@@ -269,7 +269,7 @@
             android:text="Sell" />
 
         <Button
-            android:id="@+id/btnGoogle"
+            android:id="@+id/btnBuy"
             android:layout_width="160dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="5dp"
