--- a/app/src/main/res/layout/fragment_trade_payment.xml
+++ b/app/src/main/res/layout/fragment_trade_payment.xml
@@ -25,7 +25,7 @@
             android:src="@drawable/ic_baseline_arrow_back_ios_24_white" />
 
         <TextView
-            android:id="@+id/tvBuy"
+            android:id="@+id/tvBuySell"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
@@ -41,7 +41,7 @@
             tools:text="Buy Solona" />
 
         <TextView
-            android:id="@+id/tvBuyAmount"
+            android:id="@+id/tvBuySellAmount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -246,7 +246,7 @@
             android:textAllCaps="false"/>
 
         <Button
-            android:id="@+id/btnBuy"
+            android:id="@+id/btnTrade"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="5dp"
